Update at Featured Project text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="Banner-Info">
 	<img src="icons/SVG/iconmonstr-star-6.svg" class="info-icon">
 	<p class="info-text">
-		Featured Project
+		Featured <span> Project </span>
 	</p>
 </div>
 <div id="Projects-Banner">
