--- a/pages/projects/Boored/index.html
+++ b/pages/projects/Boored/index.html
@@ -38,7 +38,7 @@
 </div>
 <article class="centered-product-info">
 	<p>With Boored.py you can extract media from various imageboards with only one library.</p>
-	<p>This library interacts with the API of these pages automatically using JSON and urllib for get the data of the APIs</p>
+	<p>This library interacts with the API of these pages automatically using JSON and urllib to get the data of the APIs</p>
 	<h4><b>Boored.py 1.0 List of supported sites</b></h4>
 	<ul>
 		<li>rule34.xxx</li>
