--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="pages/about.html">About</a>
 			</li>
 			<li>
-				<a href="pages/design.html">Designs
+				<a href="pages/blog.html">Blog
 			</li>
 			<li>
 				<a href="pages/projects.html">Projects</a>
@@ -46,14 +46,13 @@
 	<p id="about-preview">A collection of booru scrappers in only one library</p>
 	<div class="separator">	</div>
 	<div id="banner-buttons-section">
-		<a href="pages/projects/Boored/index.html" class="learn-more">Learn More</a>
+		<a href="pages/projects/Boored/index.html" id="main-learn-more">Learn More</a>
 	<!--
 		<a href="" class="download-button">Download</a>
 	-->
 	</div>
 	<div class="separator">	</div>
 </div>
-<!--
 <div id="mini-biography">
 	<h5 class="section-info">About me</h5>
 	<h3>Hello, i'm VanDerFire,</h3>
@@ -73,15 +72,33 @@
 
 <section id="projects">
 	<h5 class="section-info">Projects</h5>
-	<article id="Venturi API">
-		<img src="icons/SVG/fastapi.svg">
-		<h3>Boored.py</h3>
-		<h4><i>Simple booru scraping using RestAPIs</i></h4>
-		<a href="pages/projects/boored/index.html" class="learn-more">Learn More</a>
-	</article>
+	<div class="projects-cards">
+		<article id="Boored.py" class="project-card">
+			<div class="Project-Header">
+				<img src="icons/SVG/infinity.svg" class="project-card-icon">
+				<h3>Boored.py</h3>
+			</div>
+			<div class="Project-Info">
+				<h4>Simple booru scraping using RestAPIs</h4>
+				<a href="pages/projects/boored/index.html" class="learn-more">Learn More</a>
+				<a href="https://github.com/VanDerFire/Boored.py" class="github-link">Github</a>
+			</div>
+		</article>
+		<article id="Hina-Bot" class="project-card">
+			<div class="Project-Header">
+				<img src="icons/SVG/discord.svg" class="project-card-icon">
+				<h3>Hina Discord Bot</h3>
+			</div>
+			<div class="Project-Info">
+				<h4>Official venturi private bot</h4>
+				<a href="pages/projects/hina/index.html" class="learn-more">Learn More</a>
+			</div>
+		</article>
+	</div>
 </section>
--->
 
-<footer>VanDerFire 2022</footer>
+<footer>
+	VanDerFire 2022 - All rights reserved
+</footer>
 </body>
 </html>
