--- a/pages/projects/hina/index.html
+++ b/pages/projects/hina/index.html
@@ -15,16 +15,16 @@
 				<a href="../../../index.html">Homepage</a>
 			</li>
 			<li>
-				<a href="pages/about.html">About</a>
+				<a href="../../about.html">About</a>
 			</li>
 			<li>
-				<a href="pages/blog.html">Blog
+				<a href="../../blog.html">Blog
 			</li>
 			<li>
-				<a href="pages/projects.html">Projects</a>
+				<a href="../../projects.html">Projects</a>
 			</li>
 			<li>
-				<a href="pages/contact.html">Contact</a>
+				<a href="../../contact.html">Contact</a>
 			</li>
 		</ul>
 	</nav>
@@ -37,7 +37,59 @@
 	<h3 class="article-date">June 10 2022</h3>
 </div>
 <article class="centered-product-info">
-	<p>Hina es un bot en desarrollo creado por VanDerFire para su uso ex</p>
+	<p>Hina es un bot en desarrollo creado por VanDerFire para su uso exclusivo en los servidores de Venturi</p>
+	<h4>Lista de Capacidades de Hina</h4>
+	<ul>
+		<li>
+			Herramientas basicas de moderacion.
+		</li>
+		<li>
+			Acceso a las APIS de la NASA para obtener imagenes espaciales.
+		</li>
+		<li>
+			Variedad de comandos para el entretenimiento del usuario.
+		</li>
+		<li>
+			Acceso a OpenWeatherMap para obtener informacion sobre el clima en todo el mundo.
+		</li>
+		<li>
+			<p><b>NSFW</b> Acceso a diferentes tableros de imagenes NSFW como rule34.xxx o e621.net para obtener imagenes o videos de esos sitios.</p>
+		</li>
+	</ul>
+	<h4>Caracteristicas en desarrollo</h4>
+	<ul>
+		<li>
+			Comando de ayuda extendido.
+		</li>
+		<li>
+			Opciones de interaccion entre usuarios (tambien NSFW).
+		</li>
+		<li>
+			Creacion de codigos QR.
+		</li>
+		<li>
+			Obtencion de letras de canciones.
+		</li>
+		<li>
+			<p><b>NSFW</b> Extension de la lista de tableros de imagenes soportados (usando booru.py).</p>
+		</li>
+		<li>
+			<p><b>NSFW</b> Imagenes NSFW Personalizadas.</p>
+		</li>
+	</ul>
+	<h4>F.A.Q.</h4>
+	<h5>
+		¿Hay planes para permitir que Hina funcione en mas servidores?
+	</h5>
+	<p>
+		No, puesto que la infraestructura y las capacidades tecnicas del bot no permiten que funcione en muchos servidores, sin embargo, en el caso de que las capacidades de host del mejoren, es posible que haya cambios que permitan al bot funcionar en multiples servidores al mismo tiempo 24/7.
+	</p>
+	<h5>
+		¿El codigo de Hina sera liberado?
+	</h5>
+	<p>
+		No, puesto que por ahora no deseo dejar que el bot se vuelva Open-Source, sin embargo, he creado un proyecto de bot comunitario que puedes visitar <a href="https://github.com/VanDerFire/Baihu">aqui</a> (Aunque sigue incompleto).
+	</p>
 </article>
 <footer>
 	VanDerFire 2022 - All rights reserved
