--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="Project-Info">
 				<h4>Simple booru scraping using RestAPIs</h4>
-				<a href="pages/projects/boored/index.html" class="learn-more">Learn More</a>
+				<a href="pages/projects/Boored/index.html" class="learn-more">Learn More</a>
 				<a href="https://github.com/VanDerFire/Boored.py" class="github-link">Github</a>
 			</div>
 		</article>
@@ -90,7 +90,7 @@
 				<h3>Hina Discord Bot</h3>
 			</div>
 			<div class="Project-Info">
-				<h4>Official venturi private bot</h4>
+				<h4>Official venturi private bot (In Spanish)</h4>
 				<a href="pages/projects/hina/index.html" class="learn-more">Learn More</a>
 			</div>
 		</article>
