update to the projects and the homepage

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	</nav>
 	
 </header>
+<!--
 <div id="Banner-Info">
 	<img src="icons/SVG/iconmonstr-star-6.svg" class="info-icon">
 	<p class="info-text">
@@ -38,18 +39,22 @@
 	</p>
 </div>
 <div id="Projects-Banner">
-<!--
+
 	<img src="icons/SVG/fire.svg" width="48px" id="headline-logo">
--->
+
 	<p>Introducing:</p>
 	<h1 id="main-project-headline">Boored.py</h1>
 	<p id="about-preview">A collection of booru scrappers in only one library</p>
 	<div class="separator">	</div>
 	<div id="banner-buttons-section">
 		<a href="pages/projects/Boored/index.html" id="main-learn-more">Learn More</a>
-	<!--
 		<a href="" class="download-button">Download</a>
-	-->
+	</div>
+-->
+<div>
+	<div id="AboutMe" class="aboutme">
+		<h1>VanDerFire</h1>
+		<p>Software developer</p>
 	</div>
 	<div class="separator">	</div>
 </div>
@@ -70,20 +75,9 @@
 </div>
 
 
-<section id="projects">
+<!-- <section id="projects">
 	<h5 class="section-info">Projects</h5>
 	<div class="projects-cards">
-		<article id="Boored.py" class="project-card">
-			<div class="Project-Header">
-				<img src="icons/SVG/infinity.svg" class="project-card-icon">
-				<h3>Boored.py</h3>
-			</div>
-			<div class="Project-Info">
-				<h4>Simple booru scraping using RestAPIs</h4>
-				<a href="pages/projects/Boored/index.html" class="learn-more">Learn More</a>
-				<a href="https://github.com/VanDerFire/Boored.py" class="github-link">Github</a>
-			</div>
-		</article>
 		<article id="Hina-Bot" class="project-card">
 			<div class="Project-Header">
 				<img src="icons/SVG/discord.svg" class="project-card-icon">
@@ -95,7 +89,7 @@
 			</div>
 		</article>
 	</div>
-</section>
+</section> -->
 
 <footer>
 	VanDerFire 2022 - All rights reserved
