--- a/index.html
+++ b/index.html
@@ -1,98 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>VanDerFire Projects</title>
-
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	<link rel="stylesheet" type="text/css" href="styles/sty.css">
 </head>
 <body>
-<header id="Main-Header">
-	<div id="Header-Title">
-		<p>VanDerFire <span>Projects</span></p>
-	</div>
-	<nav id="Header-Nav">	
-		<ul>
-			<li>
-				<a href="index.html">Homepage</a>
-			</li>
-			<li>
-				<a href="pages/about.html">About</a>
-			</li>
-			<li>
-				<a href="pages/blog.html">Blog
-			</li>
-			<li>
-				<a href="pages/projects.html">Projects</a>
-			</li>
-			<li>
-				<a href="pages/contact.html">Contact</a>
-			</li>
-		</ul>
-	</nav>
-	
-</header>
-<!--
-<div id="Banner-Info">
-	<img src="icons/SVG/iconmonstr-star-6.svg" class="info-icon">
-	<p class="info-text">
-		Featured <span> Project </span>
-	</p>
-</div>
-<div id="Projects-Banner">
+	<div class="container-fluid px-0">
+		<nav class="navbar navbar-expand-md bg-gradient fill w-100 shadow-md m-0">
+			<div class="container-fluid">
+				<img src="icons/SVG/vanderfire-white.svg" width="64">
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-	<img src="icons/SVG/fire.svg" width="48px" id="headline-logo">
-
-	<p>Introducing:</p>
-	<h1 id="main-project-headline">Boored.py</h1>
-	<p id="about-preview">A collection of booru scrappers in only one library</p>
-	<div class="separator">	</div>
-	<div id="banner-buttons-section">
-		<a href="pages/projects/Boored/index.html" id="main-learn-more">Learn More</a>
-		<a href="" class="download-button">Download</a>
-	</div>
--->
-<div>
-	<div id="AboutMe" class="aboutme">
-		<h1>VanDerFire</h1>
-		<p>Software developer</p>
-	</div>
-	<div class="separator">	</div>
-</div>
-<div id="mini-biography">
-	<h5 class="section-info">About me</h5>
-	<h3>Hello, i'm VanDerFire,</h3>
-	<p>I am a latinamerican software developer specialized in python.</p>
-	<h4>What i do?</h4>
-	<p>
-		I create RestAPIs, WebScrappers (Also APIs Scrappers), Discord Bots and Currently i'm learning Web Development 
-	</p>
-	<h4>Which programming languages have you learned?</h4>
-	<p>
-		I already know how to code in Python, Ruby and Javascript. 
-		I have interest in learn Rust, C++ or C#.
-	</p>
-	<h4></h4>
-</div>
-
-
-<!-- <section id="projects">
-	<h5 class="section-info">Projects</h5>
-	<div class="projects-cards">
-		<article id="Hina-Bot" class="project-card">
-			<div class="Project-Header">
-				<img src="icons/SVG/discord.svg" class="project-card-icon">
-				<h3>Hina Discord Bot</h3>
+				<!--<ul class="nav nav-fill">
+					<li class="nav-item">
+						<a href="" class="nav-link text-white">
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="" class="nav-link text-white">
+							Projects
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="" class="nav-link text-white">
+							Contact
+						</a>
+					</li>
+				</ul>-->
 			</div>
-			<div class="Project-Info">
-				<h4>Official venturi private bot (In Spanish)</h4>
-				<a href="pages/projects/hina/index.html" class="learn-more">Learn More</a>
-			</div>
-		</article>
+		</nav>
 	</div>
-</section> -->
-
-<footer>
-	VanDerFire 2022 - All rights reserved
-</footer>
+	<div class="container" id="aboutme">
+		<img src="icons/SVG/vanderfire-white.svg" class="rounded mx-auto d-block" height="256">
+		<h1 class="fs-1">VanDerFire</h1>
+		<p>This site is currently under construction and renovation. Please come back later.</p>
+	</div>
+	<!--<div class="container start-0">
+		<footer>
+			<img src="icons/SVG/vanderfire-white.svg" alt="" width="24">
+		</footer>
+	</div>-->
 </body>
 </html>
